--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       sure what I'm doing but I'm happy to be here nonetheless!</p>
   </div>
   <footer>
-    <h4>Contact options below:</h4>
+    <h4>Want to say hi?</h4>
   <a id="insta" href="https://www.instagram.com/__k.tty__/"></a>
-  <a id="email" href="https://www.instagram.com/__k.tty__/"></a>
+  <a id="email" href="mailto:nicholedlrosa@gmail.com"></a>
   </footer>
 </body>  
 
